# mesh

./: .clang-format  .gitignore  CMakeLists.txt
include/: mesh.h  vect.h
src/: CMakeLists.txt  mesh.cpp  meshio.cpp  vect.cpp
test/: CMakeLists.txt
